# demopyrs

./: Cargo.toml  README.md  pyproject.toml
demopyrs/: __init__.py
python/demopyrs/: __init__.py
src/: lib.rs
tests/: client_test.py  version_test.py
