[package]
name = "demopyrs"
version = "0.1.0"
edition = "2021"

[lib]
name = "demopyrs"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38", "gil-refs"] }
reqwest = { version = "0.12.4", features = ["blocking"] }

[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }

