[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "demopyrs"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.pdm.dev-dependencies]
development = [
    "maturin[patchelf]>=1.5.1",
]
test = [
    "pytest>=8.2.1",
]

[tool.maturin]
module-name = "demopyrs._lib"
python-source = "python"
